syntax = "proto3";


option java_multiple_files = true;
option java_package = "org.opensearch.action.search";
option java_outer_classname = "PBSearchResponse";

message SearchResponse {
    SearchResponseSections internal_response = 1;
    optional string scroll_id = 2;
    optional string point_in_time_id = 3;
    int32 total_shards = 4;
    int32 successful_shards = 5;
    int32 skipped_shards = 6;
    repeated SearchShardFailure shard_failures = 7;
    Clusters clusters = 8;
    int64 took_in_millis = 9;
    PhaseTook phase_took = 10;
}

message SearchShardFailure {
    string reason = 1;
    SearchShardTarget target = 2;
}

message SearchShardTarget {
    string shard_id = 1;
    string index_id = 2;
    string node_id = 3;
}

message Clusters {
    int32 total = 1;
    int32 successful = 2;
    int32 skipped = 3;
}

message PhaseTook {
    map<string, int64> phase_took_map = 1;
}

message SearchResponseSections {
    SearchHits hits = 1;
    Aggregations aggregations = 2;
    Suggest suggest = 3;
    SearchProfileShardResults profile_results = 4;
    bool timed_out = 5;
    bool terminated_early = 6;
    int32 num_reduce_phases = 7; 
    repeated SearchExtBuilder search_exts = 8;
}

message SearchHits {
    TotalHits total_hits = 1;
    repeated SearchHit hits = 2;
    float max_score = 3;
    optional string collapse_field = 5;
    repeated bytes collapse_values = 6;
}

message TotalHits {
    int64 value = 1;
    Relation relation = 2;

    enum Relation {
        EQUAL_TO = 0;
        GREATER_THAN_OR_EQUAL_TO = 1;
    }
}

message SearchHit {
    int32 doc_id = 1;
    float score = 2;
    string id = 3;
    NestedIdentity nested_id = 4;
    int64 version = 5;
    int64 seq_no = 6;
    int64 primary_term = 7;
    bytes source = 8;
    map<string, DocumentField> document_fields = 9;
    map<string, DocumentField> meta_fields = 10;
    map<string, HighlightField> highlight_fields = 11;
    SearchSortValues sort_values = 12;
    repeated string matched_queries = 13;
    SearchShardTarget shard = 14;
    string index = 15; 
    string clusterAlias = 16;
    map<string, bytes> source_as_map = 17;
}

message NestedIdentity {
    string field = 1;
    int32 offset = 2;
    NestedIdentity child = 3;
}

message DocumentField {
    string name = 1;
    repeated bytes values = 2;
}

message HighlightField {
    string name = 1;
    repeated string fragments = 2;
}

message SearchSortValues {
    repeated bytes formatted_sort_values = 1;
    repeated bytes raw_sort_values = 2;
}

message Aggregations {
    bytes aggregations = 1;
}

message Suggest {
    bytes suggestions = 1;
}

message SearchProfileShardResults {
    bytes results = 1;
}

message SearchExtBuilder {
    bytes search_exts = 1;
}
